fix alignment issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -134,6 +134,7 @@ p {
 .header-content-wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 540px;
     display: block;
 
